syntax="proto3";

package user;

option go_package="/user";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {}
  rpc Login(LoginReq) returns (LoginResp) {}
  rpc UserInfo(UserInfoReq) returns (UserInfoResp) {}
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  uint32 user_id = 1;
}

message LoginReq {
  string email= 1;
  string password = 2;
}

message LoginResp {
  uint32 user_id = 1;
}

message UserInfoReq {
  uint32 user_id = 1;
}

message UserInfoResp {
  uint32 user_id = 1;
  string email = 2;
}